@@ -5,29 +5,30 @@ This document is the API specification for the Jasypt
 Java Simplified Encryption library, version 1.0.
 </p>
 
-<p>Direct links to the most popular classes:
-  <ul>
-    <li><i>Easy</i> encryption entities:
-      <ul>
-        <li>{@link org.jasypt.util.PasswordEncryptor}</li>
-        <li>{@link org.jasypt.util.TextEncryptor}</li>
-        <li>{@link org.jasypt.util.StrongTextEncryptor}</li>
-      </ul>
-    </li>
-    <li>Message Digesting:
-      <ul>
-        <li>{@link org.jasypt.digest.StandardByteDigester}</li>
-        <li>{@link org.jasypt.digest.StandardStringDigester}</li>
-      </ul>
-    </li>
-    <li>Message Encrypting:
-      <ul>
-        <li>{@link org.jasypt.encryption.pbe.StandardPBEByteEncryptor}</li>
-        <li>{@link org.jasypt.encryption.pbe.StandardPBEStringEncryptor}</li>
-      </ul>
-    </li>
-  </ul>
+<p>
+  Direct links to the most popular classes:
 </p>
+<ul>
+  <li><i>Easy</i> encryption entities:
+    <ul>
+      <li>{@link org.jasypt.util.PasswordEncryptor}</li>
+      <li>{@link org.jasypt.util.TextEncryptor}</li>
+      <li>{@link org.jasypt.util.StrongTextEncryptor}</li>
+    </ul>
+  </li>
+  <li>Message Digesting:
+    <ul>
+      <li>{@link org.jasypt.digest.StandardByteDigester}</li>
+      <li>{@link org.jasypt.digest.StandardStringDigester}</li>
+    </ul>
+  </li>
+  <li>Message Encrypting:
+    <ul>
+      <li>{@link org.jasypt.encryption.pbe.StandardPBEByteEncryptor}</li>
+      <li>{@link org.jasypt.encryption.pbe.StandardPBEStringEncryptor}</li>
+    </ul>
+  </li>
+</ul>
 <br/>
 
 </body>
